<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="horizontal" android:id="@id/linearLayoutForm" android:tag="layout/form_create_album_layout_0" android:paddingLeft="20.0dip" android:paddingTop="8.0dip" android:paddingRight="20.0dip" android:paddingBottom="8.0dip" android:clickable="false" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="24.0dip" android:textColor="#ff000000" android:id="@id/form_description_text" android:layout_width="fill_parent" android:layout_height="32.0dip" android:layout_marginTop="24.0dip" android:text="@string/form_create_description" android:fontFamily="@font/montserrat_bold" app:autoSizeTextType="uniform" />
    <com.google.android.material.textfield.TextInputLayout android:textColor="#ff000000" android:id="@id/form_input_name" android:background="#ffe0e0e0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" app:cornerRadius="64.0dip" app:layout_constraintTop_toBottomOf="@id/form_description_text">
        <com.google.android.material.textfield.TextInputEditText android:textColor="#ff000000" android:id="@id/form_input_text_name" android:background="#ffe0e0e0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/str_form_1" app:cornerRadius="32.0dip" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:id="@id/form_input_release" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" app:cornerRadius="64.0dip" app:layout_constraintTop_toBottomOf="@id/form_input_name">
        <com.google.android.material.textfield.TextInputEditText android:textColor="#ff000000" android:id="@id/form_input_text_release" android:background="#ffe0e0e0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/str_form_2" app:cornerRadius="32.0dip" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:id="@id/form_input_gender" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" app:cornerRadius="64.0dip" app:layout_constraintTop_toBottomOf="@id/form_input_release">
        <Spinner android:textColor="#ff000000" android:id="@id/form_spinner_text_gender" android:background="#ffe0e0e0" android:layout_width="fill_parent" android:layout_height="56.0dip" android:hint="@string/str_form_4" app:cornerRadius="32.0dip" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:id="@id/form_input_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" app:cornerRadius="64.0dip" app:layout_constraintTop_toBottomOf="@id/form_input_gender">
        <com.google.android.material.textfield.TextInputEditText android:textColor="#ff000000" android:id="@id/form_input_text_description" android:background="#ffe0e0e0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/str_form_6" app:cornerRadius="32.0dip" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:id="@id/form_input_record" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" app:cornerRadius="64.0dip" app:layout_constraintTop_toBottomOf="@id/form_input_description">
        <Spinner android:textColor="#ff000000" android:id="@id/form_spinner_text_record" android:background="#ffe0e0e0" android:layout_width="fill_parent" android:layout_height="56.0dip" android:hint="@string/str_form_4" app:cornerRadius="32.0dip" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:id="@id/form_input_image" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" app:cornerRadius="64.0dip" app:layout_constraintTop_toBottomOf="@id/form_input_record">
        <com.google.android.material.textfield.TextInputEditText android:textColor="#ff000000" android:id="@id/form_input_text_image" android:background="#ffe0e0e0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/str_form_5" app:cornerRadius="32.0dip" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button android:id="@id/create_album_button" android:layout_width="256.0dip" android:layout_height="48.0dip" android:layout_marginTop="16.0dip" android:text="@string/create_album" android:fontFamily="@font/montserrat_bold" app:cornerRadius="32.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/form_input_image" />
</androidx.constraintlayout.widget.ConstraintLayout>