<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:minWidth="32.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageButton android:id="@id/back_button" android:background="#ffffffff" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip" android:src="@drawable/previous_24" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="72.0dip" app:layout_constraintBottom_toTopOf="@id/button_section" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.689">
        <TextView android:textColor="@color/black" android:gravity="center" android:id="@id/company_text" android:layout_width="212.0dip" android:layout_height="72.0dip" android:text="@string/company_name" android:fontFamily="@font/montserrat_bold" app:autoSizeTextType="uniform" />
        <ImageView android:gravity="center" android:id="@id/company_logo" android:layout_width="96.0dip" android:layout_height="72.0dip" android:src="@drawable/vinil_style_2" />
    </LinearLayout>
    <RelativeLayout android:id="@id/button_section" android:paddingLeft="0.0dip" android:paddingRight="0.0dip" android:layout_width="fill_parent" android:layout_height="180.0dip" android:layout_marginBottom="4.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent">
        <Button android:id="@id/albums_button" android:layout_width="257.0dip" android:layout_height="48.0dip" android:layout_marginLeft="77.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="77.0dip" android:text="@string/text_vis_albums" android:fontFamily="@font/montserrat_bold" app:cornerRadius="32.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
        <Button android:id="@id/artists_button" android:layout_width="257.0dip" android:layout_height="48.0dip" android:layout_marginLeft="77.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="77.0dip" android:text="@string/text_vis_artists" android:layout_below="@id/albums_button" android:fontFamily="@font/montserrat_bold" app:cornerRadius="32.0dip" />
        <Button android:id="@id/collectors_button" android:layout_width="257.0dip" android:layout_height="48.0dip" android:layout_marginLeft="77.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="77.0dip" android:text="@string/text_vis_collectors" android:layout_below="@id/artists_button" android:fontFamily="@font/montserrat_bold" app:cornerRadius="32.0dip" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>