<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:minWidth="32.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="72.0dip" app:layout_constraintBottom_toTopOf="@id/button_section" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.614">
        <TextView android:textColor="@color/black" android:gravity="center" android:id="@id/company_text" android:layout_width="212.0dip" android:layout_height="72.0dip" android:text="@string/company_name" android:fontFamily="@font/montserrat_bold" app:autoSizeTextType="uniform" />
        <ImageView android:gravity="center" android:id="@id/company_logo" android:layout_width="96.0dip" android:layout_height="72.0dip" android:src="@drawable/vinil_style_2" />
    </LinearLayout>
    <RelativeLayout android:id="@id/button_section" android:paddingLeft="0.0dip" android:paddingRight="0.0dip" android:layout_width="fill_parent" android:layout_height="128.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent">
        <Button android:id="@id/visitor_button" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginLeft="64.0dip" android:layout_marginTop="40.0dip" android:layout_marginRight="63.0dip" android:layout_marginBottom="40.0dip" android:text="@string/text_visitor" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentBottom="true" android:fontFamily="@font/montserrat_bold" app:cornerRadius="32.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
        <Button android:id="@id/collector_button" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginTop="40.0dip" android:layout_marginRight="48.0dip" android:layout_marginBottom="40.0dip" android:text="@string/text_collector" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:fontFamily="@font/montserrat_bold" app:cornerRadius="32.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>